<resources>
    <string name="app_name">Cafetines UES</string>
    <string name="logUsuario">Nombre de Usuario</string>
    <string name="logClave">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="llenarBD">Llenar Base de Datos</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="insertar">Insertar</string>
    <string name="limpiar">Limpiar</string>
    <string name="nombre">Nombre</string>
    <string name="identificador">Identificador</string>
    <string name="consultar">Consultar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="idFacultad">Id Facultad</string>
    <string name="nombreFacu">Nombre Facultad</string>
    <string name="idLocal">Id de Local</string>
    <string name="idEncargado">Encargado</string>
    <string name="opcionEsInterno">Es Interno</string>
    <string name="nombreEnc">Encargado</string>
    <string name="idActualizarEncargado">Actualizar Encargado</string>
    <string name="idActualizarFacultad">Actualizar Facultad</string>
    <string name="idActualizarLocal">Actualizar Local</string>
    <string name="idConsultarEncargado">Consultar Encargado</string>
    <string name="idConsultarFacultad">Consultar Facultad</string>
    <string name="idConsultarLocal">Consultar Local</string>
    <string name="idEliminarEncargado">Eliminar Encargado</string>
    <string name="idEliminarFacultad">Eliminar Facultad</string>
    <string name="idEliminarLocal">Eliminar Local</string>
    <string name="idInsertarEncargado">Insertar Encargado</string>
    <string name="idInsertarFacultad">Insertar Facultad</string>
    <string name="idInsertarLocal">Insertar Local</string>
    <string name="mensajeBorrar">¿Está seguro que desea borrar este elemento?</string>
    <string name="encargadoActual">Encargado Actual</string>
    <string name="encargadoNuevo">Encargado Nuevo</string>
    <string name="idZona">Id de Zona</string>
    <string name="nomZona">Nombre de Zona</string>
    <string name="apellido">Apellido</string>
    <string name="idEmpleado">Id de empleado</string>
    <string name="idInsertarPrecioProdcuto">Insertar Precio/Producto</string>
    <string name="idProducto">Producto</string>
    <string name="precio">Precio $</string>
    <string name="idActualizarPrecioProducto">Actualizar Precio/Producto</string>
    <string name="idConsultarPrecioProducto">Consultar Precios/Producto</string>
    <string name="precioActual">Precio Actual $</string>
    <string name="precioNuevo">Nuevo Precio $</string>
    <string name="idEliminarPrecioProducto">Eliminar Precio / Producto</string>
    <string name="fecha">Fecha</string>
    <string name="idProdcuto">Insertar Producto</string>
    <string name="idTipoProducto">Tipo de Producto</string>
    <string name="local">Local</string>
    <string name="descripcion">Descripción</string>
    <string name="idConsultarProductos">Consultar Productos</string>
    <string name="idTipoProductoActual">Tipo Actual</string>
    <string name="idProductoNuevo">Nuevo Tipo de Producto</string>
    <string name="eliminarProductos">Eliminar Producto</string>
    <string name="idInsertarTipoProducto">Insertar Tipo de Producto</string>
    <string name="idConsultarTipoProducto">Consultar Tipo de Producto</string>
    <string name="idActualizarTipoProducto">Actualizar Tipo de Producto</string>
    <string name="idEliminarTipoProducto">Eliminar Tipo de Producto</string>
    <string name="idInsertarCombo">Insertar Combo</string>
    <string name="platoPrincipal">Plato Principal</string>
    <string name="bebida">Bebida</string>
    <string name="postre">Postre</string>
    <string name="complementos">Complemento</string>
    <string name="idConsultarCombo">Consultar Combo</string>
    <string name="idActualizarCombo">Actualizar Combo</string>
    <string name="idCombo">Combo</string>
    <string name="ifoProducto">Agregar productos al combo</string>
    <string name="opcionDisponible">Disponible</string>
    <string name="idEliminarCombo">Eliminar Combo</string>
    <string name="idInsertarPedido">Realizar Pedido</string>
    <string name="tipoPedido">Tipo de pedido</string>
    <string name="infoPedido">Agregue Productos o Combos al pedido</string>
    <string name="realizarPedido">Realizar Pedido</string>
    <string name="tipoPago">Tipo de Pago</string>
    <string name="idConsultarPedido">Consultar Pedido</string>
    <string name="noPedido">N° de Pedido</string>
    <string name="monto">Monto Total</string>
    <string name="pagado">Pagado</string>
    <string name="contiene">Contiene</string>
    <string name="idActualizarPedido">Actualizar Pedido</string>
    <string name="idInsertarMonto">Insertar Monto</string>
    <string name="montoMax">Monto Máximo</string>
    <string name="montoMin">Monto Mínimio</string>
    <string name="eliminarPedido">Eliminar Pedido</string>
</resources>