<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".pm11074.Local.InsertarLocalActivity">

    <TableRow>
        <TextView android:text="@string/idLocal"/>
        <EditText
            android:id="@+id/editId"
            android:inputType="text"
            android:maxLength="2" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idEncargado"/>
        <EditText
            android:id="@+id/editIdEnc"
            android:inputType="text"
            android:maxLength="2" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_gravity="center|left"
            android:text="@string/opcionEsInterno" />
        <CheckBox
            android:id="@+id/checkEsInterno"
            android:layout_gravity="left" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarLocal"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            android:layout_marginHorizontal="50dp"/>

    </TableRow>

</TableLayout>