<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".hc17018.Producto.ActualizarProductoActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/idConsultarProductos"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="9pt"
        android:textStyle="bold"></TextView>

    <TableRow android:layout_height="70dp">
        <TextView
            android:text="@string/local"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/editIdLocalSpinner"
            android:minHeight="25dp"
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="30dp" />
    </TableRow>

    <TableRow
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="70dp">
        <TextView
            android:text="@string/idProducto"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/editIdProductosSpinner"
            android:minHeight="25dp"
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="30dp" />
    </TableRow>

    <TableLayout>
        <TableRow
            android:gravity="center"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btnConsultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultar"
                android:onClick="consultarProducto"
                android:layout_marginRight="10dp"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/idTipoProductoActual" />

    <EditText
        android:id="@+id/editTipo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled ="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:longClickable="false" />

    <TextView
        android:text="@string/idProductoNuevo"
        android:gravity="left"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/editIdTiposSpinner"
        android:minHeight="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precioActual" />

    <EditText
        android:id="@+id/editPrecio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:maxLength="6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion" />

    <EditText
        android:id="@+id/editDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="50" />

    <TableLayout android:layout_marginTop="15dp">
        <TableRow android:gravity="center">
            <Button
                android:onClick="actualizarProducto"
                android:id="@+id/btnActualizar"
                android:layout_marginRight="15dp"
                android:text="@string/actualizar" />

            <Button
                android:onClick="limpiarTexto"
                android:text="@string/limpiar" />
        </TableRow>
    </TableLayout>

</TableLayout>