<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1"
    tools:context=".pm11074.Facultad.ActualizarFacultadActivity">

    <TextView
        android:id="@+id/idConsultarDiaClase"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/idActualizarFacultad"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="9pt"
        android:textStyle="bold"></TextView>

    <TableLayout android:layout_marginLeft="5dp">
        <TableRow>
            <TextView
                android:text="@string/idFacultad"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editId"
                android:layout_width="174dp"
                android:inputType="number"
                android:maxLength="3" />
            <Button
                android:id="@+id/botonConsultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultar"
                android:onClick="consultarFacultad"
                android:layout_marginRight="10dp"/>
        </TableRow>
    </TableLayout>

    <TableLayout android:layout_marginLeft="5dp">
        <TableRow android:layout_marginTop="30dp">
            <TextView
                android:text="@string/nombreFacu" />
        </TableRow>
        <TableRow>

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="394dp"
                android:inputType="text"
                android:maxLength="30" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_marginTop="30dp">
        <TableRow android:gravity="center">
            <Button
                android:onClick="actualizarFacultad"
                android:layout_marginRight="15dp"
                android:text="@string/actualizar" />
            <Button
                android:onClick="limpiarTexto"
                android:text="@string/limpiar" />
        </TableRow>
    </TableLayout>

</TableLayout>