<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".sr17012.Combo.InsertarComboActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/idInsertarCombo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="9pt"
        android:textStyle="bold"></TextView>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TableRow>
            <TextView
                android:text="@string/nombre"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="312dp"
                android:inputType="text"
                android:maxLength="50" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/precio"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editPrecio"
                android:layout_width="312dp"
                android:inputType="numberDecimal"
                android:maxLength="6" />
        </TableRow>

        <TableRow android:layout_height="70dp">
            <TextView
                android:text="@string/local"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@+id/editIdLocalSpinner"
                android:minHeight="25dp"
                android:layout_marginTop="5dp"
                android:layout_width="fill_parent"
                android:layout_height="30dp" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/idProducto"
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@+id/editIdProductoSpinner"
                android:minHeight="25dp"
                android:layout_marginTop="5dp"
                android:layout_width="fill_parent"
                android:layout_height="30dp" />
        </TableRow>
        <TableLayout>
            <TableRow
                android:gravity="center"
                android:layout_marginTop="20dp">
                <Button
                    android:onClick="insertarCombo"
                    android:text="@string/insertar" />
                <Button
                    android:onClick="limpiarTexto"
                    android:text="@string/limpiar"
                    android:layout_marginHorizontal="20dp"/>
            </TableRow>
        </TableLayout>
        <ListView
            android:id="@+id/listaCombo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </TableLayout>

</TableLayout>