<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1"
    tools:context=".hc17018.PrecioProducto.ActualizarPrecioProductoActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/idActualizarPrecioProducto"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="9pt"
        android:textStyle="bold"></TextView>

    <TableLayout>
        <TableRow
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:text="@string/idProducto"
                />

            <Spinner
                android:id="@+id/editIdProdSpinner"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="25dp" />
            <Button
                android:id="@+id/botonConsultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultar"
                android:onClick="consultarPrecioProducto"
                android:layout_marginRight="10dp"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <TableRow>
            <TextView
                android:text="@string/precioActual"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editPrecio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled ="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:longClickable="false" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/precioNuevo"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editPrecioNuevo"
                android:layout_width="312dp"
                android:inputType="numberDecimal"
                android:maxLength="6" />
        </TableRow>
    </TableLayout>

    <TableLayout android:layout_marginTop="15dp">
        <TableRow android:gravity="center">
            <Button
                android:onClick="actualizarPrecioProducto"
                android:id="@+id/btnActualizar"
                android:layout_marginRight="15dp"
                android:text="@string/actualizar" />

            <Button
                android:onClick="limpiarTexto"
                android:text="@string/limpiar" />
        </TableRow>
    </TableLayout>

</TableLayout>