<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".pm11074.Facultad.InsertarFacultadActivity">

    <TextView
        android:id="@+id/idConsultarDiaClase"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/idInsertarFacultad"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="9pt"
        android:textStyle="bold"></TextView>

    <TableRow>
        <TextView android:text="@string/nombreFacu"
            android:layout_marginLeft="5dp"/>
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>

    <TableLayout android:layout_marginTop="20dp">
        <TableRow android:gravity="center">
            <Button
                android:onClick="insertarFacultad"
                android:layout_marginRight="15dp"
                android:text="@string/insertar" />
            <Button
                android:onClick="limpiarTexto"
                android:text="@string/limpiar" />

        </TableRow>
    </TableLayout>
</TableLayout>