<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".mc15048.Zona.InsertarZonaActivity">


    <TableRow>
        <TextView android:text="@string/nomZona"/>
        <EditText
            android:id="@+id/editNombreZona"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarZona"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            android:layout_marginHorizontal="50dp"/>

    </TableRow>

</TableLayout>